--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/svg-sprite": "^0.5.2",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "nuxt-mq": "^2.0.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
