--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/svg-sprite": "^0.5.2",
+    "@nuxtjs/yandex-metrika": "^1.3.0",
     "@splidejs/vue-splide": "^0.3.5",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
